--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 </head>
 
 <style>
+.prodcut-name {
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+.prodcut-price {
+    font-size: 15px;
+    letter-spacing: 1px;
+    float: left;
+}	
+	
 .ccount { font-size:20px;}
 .ttotal { font-size:20px;}
 .ccc { font-size:15px;}
