--- a/tumblr.html
+++ b/tumblr.html
@@ -188,6 +188,9 @@ input[type="checkbox"] {
 	color: white;
 	font-weight: 600;
 }
+	
+	.cart-label { font-size:15px;
+		font-weight : 400;}
 </style>
 
 
