--- a/tumblr.html
+++ b/tumblr.html
@@ -373,10 +373,10 @@ Rs <span id="show-total">0</span><br>
 <div class="col-xs-12">
   
 <div class="checkout-fields">
-<input type="text">
-<input type="text">
-<input type="text">
-<input type="text">
+<input type="text" placeholder="Your Name">
+<input type="text" placeholder="City ">
+<input type="text" placeholder="Address">
+<input type="text" placeholder="Phone Number">
 <button>
 Place order
 </button>
