--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -325,9 +325,9 @@ Rs <span id="show-total">0</span><br>
 
 <div class="col-xs-12">
 
-<a href="http://www.google.com/">
+<!-- <a href="http://www.google.com/">
    <input type="submit" href="http://www.google.com/"  value="Visit Google" />
-</a>
+</a> -->
   
 <div class="checkout-fields">
 <input type="text" name="Name" placeholder="Your Name">
