--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -321,6 +321,10 @@ color:black;}
 Rs <span id="show-total">0</span><br>
 <span class="cart-label" >Your total</span>
 </div>
+<div class="col-xs-6"> </div>	
+<div class="btn-checkout">
+Checkout
+</div>	
 </div>
 
 <div class="col-xs-12">
@@ -339,9 +343,9 @@ Place order
 </button>
 
 </div>
-<div class="btn-checkout">
+<!-- <div class="btn-checkout">
 Checkout
-</div>
+</div> -->
 <div class="btn-checkout-close">
 Close
 </div>
