--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -310,6 +310,17 @@ color:black;}
   
 </div>
 
+<div class="checkout-fields">
+<input type="text" name="Name" placeholder="Your Name">
+<input type="text" name="City" placeholder="City">
+<input type="text" name="Address" placeholder="Address">
+<input type="text" name="Phone" placeholder="Phone Number">
+<button>
+Place order
+</button>
+</div>	
+	
+	
 <div class="cart">
 <div class="row">
 
@@ -331,7 +342,7 @@ Checkout
 
 <!-- <a href="http://www.google.com/">
    <input type="submit" href="http://www.google.com/"  value="Visit Google" />
-</a> -->
+</a> 
   
 <div class="checkout-fields">
 <input type="text" name="Name" placeholder="Your Name">
@@ -341,8 +352,8 @@ Checkout
 <button>
 Place order
 </button>
-
-</div>
+</div> -->
+	
 <!-- <div class="btn-checkout">
 Checkout
 </div> -->
