--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -314,15 +314,13 @@ color:black;}
 	
 	
 <div class="cart">
-	
+<div class="btn-checkout-close"> hide </div>	
 <div class="checkout-fields">
 <input type="text" name="Name" placeholder="Your Name">
 <input type="text" name="City" placeholder="City">
 <input type="text" name="Address" placeholder="Address">
 <input type="text" name="Phone" placeholder="Phone Number">
-<button>
-Place order
-</button>
+<div class="btn-placeorder" >Place order </div>
 </div>	
 	
 <div class="row">
@@ -360,9 +358,7 @@ Place order
 <!-- <div class="btn-checkout">
 Checkout
 </div> -->
-<div class="btn-checkout-close">
-Close
-</div>
+
   
 </div>
 
