--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -336,6 +336,7 @@ Rs <span id="show-total">0</span><br>
 <div class="col-xs-4"> </div>	
 <div class="btn-checkout">
 Checkout
+</div>
 </div>	
 </div>
 
