--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -165,6 +165,8 @@ $("input[type=checkbox]").click(function() {
 .product {
 	background-color: white;
 	margin-bottom: 50px;
+	margin-right: 3px;
+	margin-left: 3px;
 	border-radius: 5px;
 	height: px;
 }
