--- a/tumblrshop-with-products.html
+++ b/tumblrshop-with-products.html
@@ -231,7 +231,7 @@ input[type="checkbox"] {
 	.cart-label { font-size:15px;
 		font-weight : 400;}
 	
-	.checkout-fields {display:none;}
+	.checkout-fields {display:none; margin-bottom:15px;}
 .btn-checkout-close {display:none;}
 .checkout-fields input { width :100%;
 color:black;}
