--- a/stacktest.html
+++ b/stacktest.html
@@ -40,7 +40,7 @@ function myFunction() {
 <input type="text" name="Total" />
 
 
-<button onclick="myFunction()">Submit </button>
+<button onclick="myFunction()">Submit now </button>
       
       
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
