--- a/TS-submit.html
+++ b/TS-submit.html
@@ -250,7 +250,7 @@ input[type="checkbox"] {
 		font-weight : 400;}
 	
 	.checkout-fields {display:none; margin-bottom:100px;}
-.btn-checkout-close {display:none;}
+.btn-checkout-close {display:none; padding:15px; font-size:15px; }
 .checkout-fields input { width :100%;
 color:black;}
 	
