--- a/TS-submit.html
+++ b/TS-submit.html
@@ -246,13 +246,12 @@ input[type="checkbox"] {
 	font-weight: 600;
 }
 	
-	.cart-label { font-size:15px;
-		font-weight : 400;}
-	
-	.checkout-fields {display:none; margin-bottom:100px;}
+
+.checkout-fields { padding:15px; } 
+.cart-label { font-size:15px; font-weight : 400;}
+.checkout-fields {display:none; margin-bottom:100px;}
 .btn-checkout-close {display:none; padding:15px; font-size:15px; }
-.checkout-fields input { width :100%;
-color:black;}
+.checkout-fields input { width :100%; color:black; margin-bottom:10px; padding:5px;}
 	
 </style>
 
