--- a/TS-submit.html
+++ b/TS-submit.html
@@ -246,7 +246,9 @@ input[type="checkbox"] {
 	font-weight: 600;
 }
 	
-
+.cart {
+    min-height: 100% ;
+}
 .checkout-fields { padding:15px; } 
 .cart-label { font-size:15px; font-weight : 400;}
 .checkout-fields {display:none; margin-bottom:20px;}
