--- a/TS-submit.html
+++ b/TS-submit.html
@@ -247,7 +247,7 @@ input[type="checkbox"] {
 }
 	
 .cart {
-    min-height: 100% ;
+    min-height: 100% ;overflow-y: scroll;
 }
 .checkout-fields { padding:15px; } 
 .cart-label { font-size:15px; font-weight : 400;}
