--- a/TS-submit.html
+++ b/TS-submit.html
@@ -235,9 +235,9 @@ input[type="checkbox"] {
 }
 
 .cart {
-	position: fixed !important;
-	left: 0!important;
-	bottom: 0!important;
+	positio: fixed !important;
+	lef: 0!important;
+	botto: 0!important;
 	width: 100%!important;
 	text-align: center;
 	font-size: 20px;
