--- a/TS-submit.html
+++ b/TS-submit.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
    <link rel="stylesheet"  type="text/css"  href="http://www.omgjewelz.com/tumblr-shopcss">
+	  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -149,6 +150,7 @@ $("input[type=checkbox]").click(function() {
 
 
 <style>
+	* {font-family: 'Open Sans', sans-serif; }
 .wholepage {
 	background-color: #eee;
 }
