--- a/TS-submit.html
+++ b/TS-submit.html
@@ -150,7 +150,7 @@ $("input[type=checkbox]").click(function() {
 
 
 <style>
-	* {font-family: 'Lato', sans-serif; }
+	* {font-family: 'Lato', sans-serif; letter-spacing:1px; }
 .wholepage {
 	background-color: #eee;
 }
