--- a/tsfixed-t1.html
+++ b/tsfixed-t1.html
@@ -141,7 +141,7 @@ $("input[type=checkbox]").click(function() {
     Total: $("input[name='Total']").val() // <- get data from input
   });
   
-  location.href = "http://www.google.com";
+  location.href = "http://omgjewelz.com/thankyou-set/?id=tshop";
 }
 </script> <!-- Submit to Wekhook  -->
 
@@ -268,7 +268,7 @@ input[type="checkbox"] {
 .btn-placeorder {
     background-color: green;
     color: white;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
     padding: 10px;
     width: 100%;
     border: none;
@@ -407,13 +407,13 @@ Checkout
 
 <!-- Hidden Fields -->
 <div class="hidden-fields" >
-<input type="text" name="hidden-count" id="hide-count" />
+<!-- <input type="text" name="hidden-count" id="hide-count" />
 <input type="text" name="hidden-skus" id="hidden-skus" />
-<input type="text" name="hidden-total" id="hidden-total" />
+<input type="text" name="hidden-total" id="hidden-total" /> -->
 
-<input type="text" name="Count" />
-<input type="text" name="Sku" />
-<input type="text" name="Total" />
+<input type="text" name="Count" id="hide-count" />
+<input type="text" name="Sku" id="hidden-skus" />
+<input type="text" name="Total" id="hidden-total" />
 
 </div>
 
