--- a/tsfixed-t1.html
+++ b/tsfixed-t1.html
@@ -291,6 +291,31 @@ input[type="checkbox"] {
 .btn-checkout-close {display:none; padding:15px; font-size:15px; }
 
 .hidden-fields {display:none;}
+	
+	
+/* Offer title and logo css*/
+	
+	.branding {
+    background-color: black;
+}
+
+.logo {
+    width: 120px;
+    margin-left: 20px;
+}
+
+.offer-header {
+    background-color: #eee;
+    text-align: center;
+    padding: 40px 10px 0px 10px;
+}
+
+.offer-title {
+    font-size: 20px;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+
 
 	
 </style>
