--- a/create-4.html
+++ b/create-4.html
@@ -353,7 +353,7 @@ input[type="checkbox"] {
 <div class="offer-header">
 <div class="offer-title"> CREATE YOUR OWN SET </div>
 <div class="offer-description">  Pick your favorite pieces from our current collection to create your own set ! </div> <br>
-
+	<p style="color:red;"> You must select a minimum of 3 items </p> <br> 
 Any 3 items for Rs 3000 <br>
 Any 4 items for Rs 4000 <br>
 Any 5 items for Rs 5000 <br>
